src/objects/ApplicationVersionSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>CompatibleVersion__c</fullName>
        <label>Compatible Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadURL__c</fullName>
        <label>Download URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MobileAPKVersion__c</fullName>
        <label>Mobile APK Version #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldestConfirmedVersion__c</fullName>
        <label>Oldest Confirmed Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <label>Application Version Settings</label>
</CustomObject>